feat:新增collection Aggreage
